# docling-enhanced

./: .gitignore  Dockerfile  Dockerfile.cuda  README.md  app.py  app_cuda.py  docker-compose.cuda.yml  docker-compose.yml  mime_detector.py  pyproject.toml  requirements-cuda.txt  requirements-docker.txt  requirements.txt
docling_serve/: app.py  settings.py
misc/: convert_file.sh  convert_pdf.sh  test_conversions.sh
misc/test_files/: sample_data.csv  sample_data.xlsx  sample_document.docx  sample_text.txt
scripts/: build.sh  deploy.sh  logs.sh  run-local-cuda.sh  run-local.sh  run.sh  stop.sh
