[project]
name = "docling-enhanced"
version = "0.1.0"
description = "Enhanced Docling server with image processing capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling-serve[ui]>=1.2.0",
    "docling>=2.38",
    "docling-core>=2.44.1",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.29.0",
    "scalar-fastapi>=1.0.3",
    "imageio>=2.31.0",
    "opencv-python-headless>=4.8.0",
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docling_serve"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

